# qt_simple_template

./: .gitignore  CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
